<resources>
    <string name="app_name">ConnectFit</string>
    <string name="app_splash_description">Splash Screen image: Connect Fit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="senha"> Senha</string>
    <string name="logar">Logar</string>
    <string name="email"> Email</string>
    <string name="n_o_tem_uma_conta_cadastre_se">Não tem uma conta? Cadastre-se!</string>
    <string name="login">Login</string>
    <string name="login_gogle">Logue com o Google</string>
    <string name="Professional">Profissional</string>
    <string name="Student">Aluno</string>
    <string name="get_category_string">Antes de entrar, conta para a gente: você é um(a) profissional ou aluno(a)?</string>
    <string name="nome">Nome</string>
    <string name="descri_o">Descrição</string>
    <string name="quantidade_de_repeti_es">Quantidade de repetições</string>
    <string name="adicionar">adicionar</string>
    <string name="finalizar_treino">finalizar treino</string>
    <string name="signin">Signin</string>
    <string name="sou_aluno">Sou Aluno</string>
    <string name="sou_personal">Sou Personal</string>
    <string name="sou_nutricionista">Sou Nutricionista</string>
    <string name="link_da_execu_o_opcional">link da execução (opcional)</string>
    <string name="criar_treino">Criar treino</string>
    <string name="pencil">✏️</string>
    <string name="cross">X</string>
    <string name="search">digite para buscar</string>
    <string name="adicionar_especialidades">Adicionar especialidades</string>
    <string name="salvar">Salvar</string>
    <string name="deletar">deletar</string>
</resources>