<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateTrainingFragment" >

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_view_tag"
        android:name="com.example.connectfit.HeaderComponentFragment"
        android:layout_width="405dp"
        android:layout_height="59dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="9dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_header_component" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="336dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.205">

        <TextView
            android:id="@+id/titleTrainning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:gravity="center"
            android:text="@string/criar_treino"
            android:textColor="#F6F0F0"
            android:textSize="34sp" />

        <EditText
            android:id="@+id/editTextTrainningName"
            android:layout_width="323dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:autofillHints=""
            android:background="@drawable/rounded_edit_text"
            android:ems="10"
            android:hint="@string/nome"
            android:minWidth="60dp"
            android:minHeight="48dp"
            android:paddingStart="10sp"
            android:textColor="#ffffff"
            android:textColorHint="#000000" />

        <EditText
            android:id="@+id/editTextTrainningDescription"
            android:layout_width="323dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:autofillHints=""
            android:background="@drawable/rounded_edit_text"
            android:ems="10"
            android:hint="@string/descri_o"
            android:minWidth="60dp"
            android:minHeight="48dp"
            android:paddingStart="10sp"
            android:textColor="#ffffff"
            android:textColorHint="#000000" />

        <EditText
            android:id="@+id/editTextTrainningAmount"
            android:layout_width="323dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:autofillHints=""
            android:background="@drawable/rounded_edit_text"
            android:ems="10"
            android:hint="@string/quantidade_de_repeti_es"
            android:minWidth="60dp"
            android:minHeight="48dp"
            android:paddingStart="10sp"
            android:textColor="#ffffff"
            android:textColorHint="#000000" />

        <EditText
            android:id="@+id/editTextTrainningLink"
            android:layout_width="323dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:autofillHints=""
            android:background="@drawable/rounded_edit_text"
            android:ems="10"
            android:hint="@string/link_da_execu_o_opcional"
            android:minWidth="60dp"
            android:minHeight="48dp"
            android:paddingStart="10sp"
            android:textColor="#ffffff"
            android:textColorHint="#000000" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addButton"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="3sp"
                android:layout_marginEnd="3sp"
                android:background="@drawable/rounded_edit_text"
                android:minWidth="110sp"
                android:text="@string/adicionar"
                android:textColor="#000000" />

            <Button
                android:id="@+id/createButton"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="3sp"
                android:layout_marginTop="3sp"
                android:background="@drawable/rounded_edit_text"
                android:minWidth="110sp"
                android:text="@string/finalizar_treino"
                android:textColor="#000000" />
        </LinearLayout>


    </LinearLayout>

    <ListView
        android:id="@+id/listview"
        android:layout_width="410dp"
        android:layout_height="263dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_container_view_tag"
        app:layout_constraintVertical_bias="0.908" />
</androidx.constraintlayout.widget.ConstraintLayout>