<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#232222">

    <ImageView
        android:id="@+id/imageViewBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/design1"
        android:scaleType="fitXY"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".signinScreenFragment">


        <ImageView
            android:id="@+id/imageViewConnectFit"
            android:layout_width="299dp"
            android:layout_height="125dp"
            android:layout_marginTop="-50dp"
            android:layout_marginBottom="50dp"
            android:scaleType="centerCrop"
            android:src="@drawable/connect_fit_main_img" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-20sp"
            android:layout_marginBottom="20sp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/get_category_string"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:id="@+id/Professinal"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="3sp"
                android:background="#8C52FF"
                android:minWidth="110sp"
                android:text="@string/Professional"
                android:layout_marginRight="10sp"
                android:textColor="#000000" />

            <Button
                android:id="@+id/Student"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="3sp"
                android:background="#8C52FF"
                android:minWidth="110sp"
                android:text="@string/Student"
                android:textColor="#000000" />

        </LinearLayout>


    </LinearLayout>
</RelativeLayout>